@@ -10,15 +10,16 @@ package org.elasticsearch.cluster.action.shard;
 
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.ClusterStateTaskExecutor;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.action.shard.ShardStateAction.StartedShardEntry;
+import org.elasticsearch.cluster.action.shard.ShardStateAction.StartedShardUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.routing.IndexShardRoutingTable;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.allocation.AllocationService;
+import org.elasticsearch.cluster.service.ClusterStateTaskExecutorUtils;
 import org.elasticsearch.common.Priority;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.index.shard.IndexLongFieldRange;
@@ -26,13 +27,10 @@ import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.index.shard.ShardLongFieldRange;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static java.util.Collections.singletonList;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.state;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.stateWithActivePrimary;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.stateWithAssignedPrimariesAndReplicas;
@@ -40,7 +38,6 @@ import static org.elasticsearch.action.support.replication.ClusterStateCreationU
 import static org.elasticsearch.cluster.routing.allocation.decider.ThrottlingAllocationDecider.CLUSTER_ROUTING_ALLOCATION_NODE_CONCURRENT_RECOVERIES_SETTING;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.sameInstance;
 
 public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestCase {
@@ -66,25 +63,17 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
 
     public void testEmptyTaskListProducesSameClusterState() throws Exception {
         final ClusterState clusterState = stateWithNoShard();
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, Collections.emptyList());
-        assertSame(clusterState, result.resultingState);
+        assertSame(clusterState, executeTasks(clusterState, List.of()));
     }
 
     public void testNonExistentIndexMarkedAsSuccessful() throws Exception {
         final ClusterState clusterState = stateWithNoShard();
-        final StartedShardEntry entry = new StartedShardEntry(
-            new ShardId("test", "_na", 0),
-            "aId",
-            randomNonNegativeLong(),
-            "test",
-            ShardLongFieldRange.UNKNOWN
+        final StartedShardUpdateTask entry = new StartedShardUpdateTask(
+            new StartedShardEntry(new ShardId("test", "_na", 0), "aId", randomNonNegativeLong(), "test", ShardLongFieldRange.UNKNOWN),
+            createTestListener()
         );
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(entry));
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(1));
-        assertThat(result.executionResults.containsKey(entry), is(true));
-        assertThat(result.executionResults.get(entry).isSuccess(), is(true));
+        assertSame(clusterState, executeTasks(clusterState, List.of(entry)));
     }
 
     public void testNonExistentShardsAreMarkedAsSuccessful() throws Exception {
@@ -92,39 +81,39 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final ClusterState clusterState = stateWithActivePrimary(indexName, true, randomInt(2), randomInt(2));
 
         final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
-        final List<StartedShardEntry> tasks = Stream.concat(
+        final List<StartedShardUpdateTask> tasks = Stream.concat(
             // Existent shard id but different allocation id
             IntStream.range(0, randomIntBetween(1, 5))
                 .mapToObj(
-                    i -> new StartedShardEntry(
-                        new ShardId(indexMetadata.getIndex(), 0),
-                        String.valueOf(i),
-                        0L,
-                        "allocation id",
-                        ShardLongFieldRange.UNKNOWN
+                    i -> new StartedShardUpdateTask(
+                        new StartedShardEntry(
+                            new ShardId(indexMetadata.getIndex(), 0),
+                            String.valueOf(i),
+                            0L,
+                            "allocation id",
+                            ShardLongFieldRange.UNKNOWN
+                        ),
+                        createTestListener()
                     )
                 ),
             // Non existent shard id
             IntStream.range(1, randomIntBetween(2, 5))
                 .mapToObj(
-                    i -> new StartedShardEntry(
-                        new ShardId(indexMetadata.getIndex(), i),
-                        String.valueOf(i),
-                        0L,
-                        "shard id",
-                        ShardLongFieldRange.UNKNOWN
+                    i -> new StartedShardUpdateTask(
+                        new StartedShardEntry(
+                            new ShardId(indexMetadata.getIndex(), i),
+                            String.valueOf(i),
+                            0L,
+                            "shard id",
+                            ShardLongFieldRange.UNKNOWN
+                        ),
+                        createTestListener()
                     )
                 )
 
-        ).collect(Collectors.toList());
+        ).toList();
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-        });
+        assertSame(clusterState, executeTasks(clusterState, tasks));
     }
 
     public void testNonInitializingShardAreMarkedAsSuccessful() throws Exception {
@@ -132,26 +121,25 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final ClusterState clusterState = stateWithAssignedPrimariesAndReplicas(new String[] { indexName }, randomIntBetween(2, 10), 1);
 
         final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
-        final List<StartedShardEntry> tasks = IntStream.range(0, randomIntBetween(1, indexMetadata.getNumberOfShards())).mapToObj(i -> {
-            final ShardId shardId = new ShardId(indexMetadata.getIndex(), i);
-            final IndexShardRoutingTable shardRoutingTable = clusterState.routingTable().shardRoutingTable(shardId);
-            final String allocationId;
-            if (randomBoolean()) {
-                allocationId = shardRoutingTable.primaryShard().allocationId().getId();
-            } else {
-                allocationId = shardRoutingTable.replicaShards().iterator().next().allocationId().getId();
-            }
-            final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
-            return new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN);
-        }).collect(Collectors.toList());
+        final List<StartedShardUpdateTask> tasks = IntStream.range(0, randomIntBetween(1, indexMetadata.getNumberOfShards()))
+            .mapToObj(i -> {
+                final ShardId shardId = new ShardId(indexMetadata.getIndex(), i);
+                final IndexShardRoutingTable shardRoutingTable = clusterState.routingTable().shardRoutingTable(shardId);
+                final String allocationId;
+                if (randomBoolean()) {
+                    allocationId = shardRoutingTable.primaryShard().allocationId().getId();
+                } else {
+                    allocationId = shardRoutingTable.replicaShards().iterator().next().allocationId().getId();
+                }
+                final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
+                return new StartedShardUpdateTask(
+                    new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN),
+                    createTestListener()
+                );
+            })
+            .toList();
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-        });
+        assertSame(clusterState, executeTasks(clusterState, tasks));
     }
 
     public void testStartedShards() throws Exception {
@@ -164,23 +152,35 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final ShardRouting primaryShard = clusterState.routingTable().shardRoutingTable(shardId).primaryShard();
         final String primaryAllocationId = primaryShard.allocationId().getId();
 
-        final List<StartedShardEntry> tasks = new ArrayList<>();
-        tasks.add(new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN));
+        final List<StartedShardUpdateTask> tasks = new ArrayList<>();
+        tasks.add(
+            new StartedShardUpdateTask(
+                new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN),
+                createTestListener()
+            )
+        );
         if (randomBoolean()) {
             final ShardRouting replicaShard = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next();
             final String replicaAllocationId = replicaShard.allocationId().getId();
-            tasks.add(new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN));
+            tasks.add(
+                new StartedShardUpdateTask(
+                    new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN),
+                    createTestListener()
+                )
+            );
         }
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
 
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-        });
+        final var resultingState = executeTasks(clusterState, tasks);
+        assertNotSame(clusterState, resultingState);
+        for (final var task : tasks) {
+            assertThat(
+                resultingState.routingTable()
+                    .shardRoutingTable(task.getEntry().shardId)
+                    .getByAllocationId(task.getEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.STARTED)
+            );
+        }
     }
 
     public void testDuplicateStartsAreOkay() throws Exception {
@@ -193,20 +193,26 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final String allocationId = shardRouting.allocationId().getId();
         final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
 
-        final List<StartedShardEntry> tasks = IntStream.range(0, randomIntBetween(2, 10))
-            .mapToObj(i -> new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN))
-            .collect(Collectors.toList());
+        final List<StartedShardUpdateTask> tasks = IntStream.range(0, randomIntBetween(2, 10))
+            .mapToObj(
+                i -> new StartedShardUpdateTask(
+                    new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN),
+                    createTestListener()
+                )
+            )
+            .toList();
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-        });
+        final var resultingState = executeTasks(clusterState, tasks);
+        assertNotSame(clusterState, resultingState);
+        for (final var task : tasks) {
+            assertThat(
+                resultingState.routingTable()
+                    .shardRoutingTable(task.getEntry().shardId)
+                    .getByAllocationId(task.getEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.STARTED)
+            );
+        }
     }
 
     public void testPrimaryTermsMismatch() throws Exception {
@@ -225,41 +231,48 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
         final ShardId shardId = new ShardId(clusterState.metadata().index(indexName).getIndex(), shard);
         final String primaryAllocationId = clusterState.routingTable().shardRoutingTable(shardId).primaryShard().allocationId().getId();
         {
-            final StartedShardEntry task = new StartedShardEntry(
-                shardId,
-                primaryAllocationId,
-                primaryTerm - 1,
-                "primary terms does not match on primary",
-                ShardLongFieldRange.UNKNOWN
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(
+                    shardId,
+                    primaryAllocationId,
+                    primaryTerm - 1,
+                    "primary terms does not match on primary",
+                    ShardLongFieldRange.UNKNOWN
+                ),
+                createTestListener()
             );
 
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.INITIALIZING));
-            assertSame(clusterState, result.resultingState);
+            assertSame(clusterState, executeTasks(clusterState, List.of(task)));
+            assertThat(
+                clusterState.routingTable()
+                    .shardRoutingTable(task.getEntry().shardId)
+                    .getByAllocationId(task.getEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.INITIALIZING)
+            );
         }
         {
-            final StartedShardEntry task = new StartedShardEntry(
-                shardId,
-                primaryAllocationId,
-                primaryTerm,
-                "primary terms match on primary",
-                ShardLongFieldRange.UNKNOWN
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(
+                    shardId,
+                    primaryAllocationId,
+                    primaryTerm,
+                    "primary terms match on primary",
+                    ShardLongFieldRange.UNKNOWN
+                ),
+                createTestListener()
             );
 
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertNotSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-            assertNotSame(clusterState, result.resultingState);
-            clusterState = result.resultingState;
+            final var resultingState = executeTasks(clusterState, List.of(task));
+            assertNotSame(clusterState, resultingState);
+            assertThat(
+                resultingState.routingTable()
+                    .shardRoutingTable(task.getEntry().shardId)
+                    .getByAllocationId(task.getEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.STARTED)
+            );
+            clusterState = resultingState;
         }
         {
             final long replicaPrimaryTerm = randomBoolean() ? primaryTerm : primaryTerm - 1;
@@ -271,22 +284,20 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
                 .allocationId()
                 .getId();
 
-            final StartedShardEntry task = new StartedShardEntry(
-                shardId,
-                replicaAllocationId,
-                replicaPrimaryTerm,
-                "test on replica",
-                ShardLongFieldRange.UNKNOWN
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(shardId, replicaAllocationId, replicaPrimaryTerm, "test on replica", ShardLongFieldRange.UNKNOWN),
+                createTestListener()
             );
 
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertNotSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-            assertNotSame(clusterState, result.resultingState);
+            final var resultingState = executeTasks(clusterState, List.of(task));
+            assertNotSame(clusterState, resultingState);
+            assertThat(
+                resultingState.routingTable()
+                    .shardRoutingTable(task.getEntry().shardId)
+                    .getByAllocationId(task.getEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.STARTED)
+            );
         }
     }
 
@@ -306,24 +317,35 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
             : randomBoolean() ? ShardLongFieldRange.EMPTY
             : ShardLongFieldRange.of(1606407943000L, 1606407944000L);
 
-        final List<StartedShardEntry> tasks = new ArrayList<>();
-        tasks.add(new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", shardTimestampRange));
+        final List<StartedShardUpdateTask> tasks = new ArrayList<>();
+        tasks.add(
+            new StartedShardUpdateTask(
+                new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", shardTimestampRange),
+                createTestListener()
+            )
+        );
         if (randomBoolean()) {
             final ShardRouting replicaShard = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next();
             final String replicaAllocationId = replicaShard.allocationId().getId();
-            tasks.add(new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", shardTimestampRange));
+            tasks.add(
+                new StartedShardUpdateTask(
+                    new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", shardTimestampRange),
+                    createTestListener()
+                )
+            );
         }
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
+        final var resultingState = executeTasks(clusterState, tasks);
+        assertNotSame(clusterState, resultingState);
+        for (final var task : tasks) {
+            assertThat(
+                resultingState.routingTable()
+                    .shardRoutingTable(task.getEntry().shardId)
+                    .getByAllocationId(task.getEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.STARTED)
+            );
 
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-
-            final IndexLongFieldRange timestampRange = result.resultingState.metadata().index(indexName).getTimestampRange();
+            final var timestampRange = resultingState.metadata().index(indexName).getTimestampRange();
             if (shardTimestampRange == ShardLongFieldRange.UNKNOWN) {
                 assertThat(timestampRange, sameInstance(IndexLongFieldRange.UNKNOWN));
             } else if (shardTimestampRange == ShardLongFieldRange.EMPTY) {
@@ -333,13 +355,14 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
                 assertThat(timestampRange.getMin(), equalTo(shardTimestampRange.getMin()));
                 assertThat(timestampRange.getMax(), equalTo(shardTimestampRange.getMax()));
             }
-        });
+        }
     }
 
-    private ClusterStateTaskExecutor.ClusterTasksResult<?> executeTasks(final ClusterState state, final List<StartedShardEntry> tasks)
-        throws Exception {
-        final ClusterStateTaskExecutor.ClusterTasksResult<StartedShardEntry> result = executor.execute(state, tasks);
-        assertThat(result, notNullValue());
-        return result;
+    private ClusterState executeTasks(final ClusterState state, final List<StartedShardUpdateTask> tasks) throws Exception {
+        return ClusterStateTaskExecutorUtils.executeAndAssertSuccessful(state, executor, tasks);
+    }
+
+    private static <T> ActionListener<T> createTestListener() {
+        return ActionListener.wrap(() -> { throw new AssertionError("task should not complete"); });
     }
 }
