@@ -28,6 +28,7 @@ import org.elasticsearch.action.admin.indices.open.TransportOpenIndexAction;
 import org.elasticsearch.action.admin.indices.settings.put.TransportUpdateSettingsAction;
 import org.elasticsearch.action.admin.indices.settings.put.UpdateSettingsRequest;
 import org.elasticsearch.action.support.ActionFilters;
+import org.elasticsearch.action.support.ActiveShardCount;
 import org.elasticsearch.action.support.DestructiveOperations;
 import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.action.support.TransportAction;
@@ -37,13 +38,14 @@ import org.elasticsearch.action.support.master.TransportMasterNodeActionUtils;
 import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateTaskExecutor;
-import org.elasticsearch.cluster.ClusterStateTaskExecutor.ClusterTasksResult;
-import org.elasticsearch.cluster.ClusterStateUpdateTask;
+import org.elasticsearch.cluster.ClusterStateTaskListener;
 import org.elasticsearch.cluster.EmptyClusterInfoService;
 import org.elasticsearch.cluster.action.shard.ShardStateAction;
 import org.elasticsearch.cluster.action.shard.ShardStateAction.FailedShardUpdateTask;
 import org.elasticsearch.cluster.action.shard.ShardStateAction.StartedShardEntry;
+import org.elasticsearch.cluster.action.shard.ShardStateAction.StartedShardUpdateTask;
 import org.elasticsearch.cluster.block.ClusterBlock;
+import org.elasticsearch.cluster.coordination.JoinTask;
 import org.elasticsearch.cluster.coordination.JoinTaskExecutor;
 import org.elasticsearch.cluster.coordination.NodeRemovalClusterStateTaskExecutor;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
@@ -64,12 +66,16 @@ import org.elasticsearch.cluster.routing.allocation.decider.AllocationDeciders;
 import org.elasticsearch.cluster.routing.allocation.decider.ReplicaAfterPrimaryActiveAllocationDecider;
 import org.elasticsearch.cluster.routing.allocation.decider.SameShardAllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.cluster.service.ClusterStateTaskExecutorUtils;
+import org.elasticsearch.cluster.service.MasterService;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.IndexScopedSettings;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.concurrent.PrioritizedEsThreadPoolExecutor;
 import org.elasticsearch.core.CheckedFunction;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.env.Environment;
 import org.elasticsearch.env.TestEnvironment;
 import org.elasticsearch.index.Index;
@@ -83,13 +89,16 @@ import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.indices.ShardLimitValidator;
 import org.elasticsearch.indices.TestIndexNameExpressionResolver;
 import org.elasticsearch.snapshots.EmptySnapshotsInfoService;
+import org.elasticsearch.tasks.TaskManager;
+import org.elasticsearch.test.ClusterServiceUtils;
 import org.elasticsearch.test.gateway.TestGatewayAllocator;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.tracing.Tracer;
 import org.elasticsearch.transport.Transport;
+import org.elasticsearch.transport.TransportResponse;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xcontent.NamedXContentRegistry;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
@@ -97,17 +106,18 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static com.carrotsearch.randomizedtesting.RandomizedTest.getRandom;
+import static java.util.stream.Collectors.toMap;
 import static org.elasticsearch.env.Environment.PATH_HOME_SETTING;
 import static org.elasticsearch.test.CheckedFunctionUtils.anyCheckedFunction;
-import static org.hamcrest.Matchers.notNullValue;
-import static org.junit.Assert.assertThat;
+import static org.elasticsearch.test.ESTestCase.between;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -127,7 +137,6 @@ public class ClusterStateChanges {
     private final TransportCreateIndexAction transportCreateIndexAction;
 
     private final NodeRemovalClusterStateTaskExecutor nodeRemovalExecutor;
-    private final JoinTaskExecutor joinTaskExecutor;
 
     @SuppressWarnings("unchecked")
     public ClusterStateChanges(NamedXContentRegistry xContentRegistry, ThreadPool threadPool) {
@@ -155,9 +164,43 @@ public class ClusterStateChanges {
         Environment environment = TestEnvironment.newEnvironment(SETTINGS);
         Transport transport = mock(Transport.class); // it's not used
 
+        final var masterService = new MasterService(
+            SETTINGS,
+            clusterSettings,
+            threadPool,
+            new TaskManager(SETTINGS, threadPool, Collections.emptySet())
+        ) {
+            @Override
+            protected PrioritizedEsThreadPoolExecutor createThreadPoolExecutor() {
+                // run master tasks inline, no need to fork to a separate thread
+                return new PrioritizedEsThreadPoolExecutor(
+                    "fake-master",
+                    1,
+                    1,
+                    1,
+                    TimeUnit.SECONDS,
+                    r -> { throw new AssertionError("should not create new threads"); },
+                    null,
+                    null,
+                    PrioritizedEsThreadPoolExecutor.StarvationWatcher.NOOP_STARVATION_WATCHER
+                ) {
+                    @Override
+                    public void execute(Runnable command, final TimeValue timeout, final Runnable timeoutCallback) {
+                        command.run();
+                    }
+
+                    @Override
+                    public void execute(Runnable command) {
+                        command.run();
+                    }
+                };
+            }
+        };
         // mocks
-        clusterService = mock(ClusterService.class);
-        when(clusterService.getClusterSettings()).thenReturn(clusterSettings);
+        clusterService = new ClusterService(SETTINGS, clusterSettings, masterService, null);
+        resetMasterService();
+        masterService.start();
+
         IndicesService indicesService = mock(IndicesService.class);
         // MetadataCreateIndexService uses withTempIndexService to check mappings -> fake it here
         try {
@@ -191,7 +234,8 @@ public class ClusterStateChanges {
             TransportService.NOOP_TRANSPORT_INTERCEPTOR,
             boundAddress -> DiscoveryNode.createLocal(SETTINGS, boundAddress.publishAddress(), UUIDs.randomBase64UUID()),
             clusterSettings,
-            Collections.emptySet()
+            Collections.emptySet(),
+            Tracer.NOOP
         );
         IndexMetadataVerifier indexMetadataVerifier = new IndexMetadataVerifier(SETTINGS, xContentRegistry, null, null, null) {
             // metadata upgrader should do nothing
@@ -240,8 +284,7 @@ public class ClusterStateChanges {
             allocationService,
             IndexScopedSettings.DEFAULT_SCOPED_SETTINGS,
             indicesService,
-            shardLimitValidator,
-            threadPool
+            shardLimitValidator
         );
         MetadataCreateIndexService createIndexService = new MetadataCreateIndexService(
             SETTINGS,
@@ -304,10 +347,18 @@ public class ClusterStateChanges {
         );
 
         nodeRemovalExecutor = new NodeRemovalClusterStateTaskExecutor(allocationService);
-        joinTaskExecutor = new JoinTaskExecutor(allocationService, (s, p, r) -> {});
+    }
+
+    private void resetMasterService() {
+        final var masterService = clusterService.getMasterService();
+        masterService.setClusterStateSupplier(() -> { throw new AssertionError("should not be called"); });
+        masterService.setClusterStatePublisher(
+            (clusterStatePublicationEvent, publishListener, ackListener) -> { throw new AssertionError("should not be called"); }
+        );
     }
 
     public ClusterState createIndex(ClusterState state, CreateIndexRequest request) {
+        assertSame("simulated cluster state update will never activate any shards", ActiveShardCount.NONE, request.waitForActiveShards());
         return execute(transportCreateIndexAction, request, state);
     }
 
@@ -322,12 +373,13 @@ public class ClusterStateChanges {
         newState = MetadataIndexStateServiceUtils.closeRoutingTable(
             newState,
             blockedIndices,
-            blockedIndices.keySet().stream().collect(Collectors.toMap(Function.identity(), CloseIndexResponse.IndexResult::new))
+            blockedIndices.keySet().stream().collect(toMap(Function.identity(), CloseIndexResponse.IndexResult::new))
         );
         return allocationService.reroute(newState, "indices closed");
     }
 
     public ClusterState openIndices(ClusterState state, OpenIndexRequest request) {
+        assertSame("simulated cluster state update will never activate any shards", ActiveShardCount.NONE, request.waitForActiveShards());
         return execute(transportOpenIndexAction, request, state);
     }
 
@@ -343,46 +395,46 @@ public class ClusterStateChanges {
         return execute(transportClusterRerouteAction, request, state);
     }
 
-    public ClusterState addNodes(ClusterState clusterState, List<DiscoveryNode> nodes) {
+    public ClusterState addNode(ClusterState clusterState, DiscoveryNode discoveryNode) {
         return runTasks(
-            joinTaskExecutor,
+            new JoinTaskExecutor(allocationService, (s, p, r) -> {}),
             clusterState,
-            nodes.stream()
-                .map(
-                    node -> new JoinTaskExecutor.Task(
-                        node,
-                        "dummy reason",
-                        ActionListener.wrap(() -> { throw new AssertionError("should not complete publication"); })
-                    )
+            List.of(
+                JoinTask.singleNode(
+                    discoveryNode,
+                    "dummy reason",
+                    ActionListener.wrap(() -> { throw new AssertionError("should not complete publication"); }),
+                    clusterState.term()
                 )
-                .collect(Collectors.toList())
+            )
         );
     }
 
     public ClusterState joinNodesAndBecomeMaster(ClusterState clusterState, List<DiscoveryNode> nodes) {
-        List<JoinTaskExecutor.Task> joinNodes = new ArrayList<>();
-        joinNodes.add(JoinTaskExecutor.newBecomeMasterTask());
-        joinNodes.add(JoinTaskExecutor.newFinishElectionTask());
-        joinNodes.addAll(
-            nodes.stream()
-                .map(
-                    node -> new JoinTaskExecutor.Task(
-                        node,
-                        "dummy reason",
-                        ActionListener.wrap(() -> { throw new AssertionError("should not complete publication"); })
-                    )
+        return runTasks(
+            new JoinTaskExecutor(allocationService, (s, p, r) -> {}),
+            clusterState,
+            List.of(
+                JoinTask.completingElection(
+                    nodes.stream()
+                        .map(
+                            node -> new JoinTask.NodeJoinTask(
+                                node,
+                                "dummy reason",
+                                ActionListener.wrap(() -> { throw new AssertionError("should not complete publication"); })
+                            )
+                        ),
+                    clusterState.term() + between(1, 10)
                 )
-                .collect(Collectors.toList())
+            )
         );
-
-        return runTasks(joinTaskExecutor, clusterState, joinNodes);
     }
 
     public ClusterState removeNodes(ClusterState clusterState, List<DiscoveryNode> nodes) {
         return runTasks(
             nodeRemovalExecutor,
             clusterState,
-            nodes.stream().map(n -> new NodeRemovalClusterStateTaskExecutor.Task(n, "dummy reason", () -> {})).collect(Collectors.toList())
+            nodes.stream().map(n -> new NodeRemovalClusterStateTaskExecutor.Task(n, "dummy reason", () -> {})).toList()
         );
     }
 
@@ -391,22 +443,22 @@ public class ClusterStateChanges {
             .map(
                 failedShard -> new FailedShardUpdateTask(
                     new ShardStateAction.FailedShardEntry(
-                        failedShard.getRoutingEntry().shardId(),
-                        failedShard.getRoutingEntry().allocationId().getId(),
+                        failedShard.routingEntry().shardId(),
+                        failedShard.routingEntry().allocationId().getId(),
                         0L,
-                        failedShard.getMessage(),
-                        failedShard.getFailure(),
+                        failedShard.message(),
+                        failedShard.failure(),
                         failedShard.markAsStale()
                     ),
-                    ActionListener.wrap(() -> { throw new AssertionError("task should not complete"); })
+                    createTestListener()
                 )
             )
-            .collect(Collectors.toList());
+            .toList();
         return runTasks(shardFailedClusterStateTaskExecutor, clusterState, entries);
     }
 
     public ClusterState applyStartedShards(ClusterState clusterState, List<ShardRouting> startedShards) {
-        final Map<ShardRouting, Long> entries = startedShards.stream().collect(Collectors.toMap(Function.identity(), startedShard -> {
+        final Map<ShardRouting, Long> entries = startedShards.stream().collect(toMap(Function.identity(), startedShard -> {
             final IndexMetadata indexMetadata = clusterState.metadata().index(startedShard.shardId().getIndex());
             return indexMetadata != null ? indexMetadata.primaryTerm(startedShard.shardId().id()) : 0L;
         }));
@@ -420,27 +472,28 @@ public class ClusterStateChanges {
             startedShards.entrySet()
                 .stream()
                 .map(
-                    e -> new StartedShardEntry(
-                        e.getKey().shardId(),
-                        e.getKey().allocationId().getId(),
-                        e.getValue(),
-                        "shard started",
-                        ShardLongFieldRange.UNKNOWN
+                    e -> new StartedShardUpdateTask(
+                        new StartedShardEntry(
+                            e.getKey().shardId(),
+                            e.getKey().allocationId().getId(),
+                            e.getValue(),
+                            "shard started",
+                            ShardLongFieldRange.UNKNOWN
+                        ),
+                        createTestListener()
                     )
                 )
-                .collect(Collectors.toList())
+                .toList()
         );
     }
 
-    private <T> ClusterState runTasks(ClusterStateTaskExecutor<T> executor, ClusterState clusterState, List<T> entries) {
+    private <T extends ClusterStateTaskListener> ClusterState runTasks(
+        ClusterStateTaskExecutor<T> executor,
+        ClusterState clusterState,
+        List<T> entries
+    ) {
         try {
-            ClusterTasksResult<T> result = executor.execute(clusterState, entries);
-            for (ClusterStateTaskExecutor.TaskResult taskResult : result.executionResults.values()) {
-                if (taskResult.isSuccess() == false) {
-                    throw taskResult.getFailure();
-                }
-            }
-            return result.resultingState;
+            return ClusterStateTaskExecutorUtils.executeAndThrowFirstFailure(clusterState, executor, entries);
         } catch (Exception e) {
             throw ExceptionsHelper.convertToRuntime(e);
         }
@@ -451,24 +504,39 @@ public class ClusterStateChanges {
         Request request,
         ClusterState clusterState
     ) {
-        return executeClusterStateUpdateTask(clusterState, () -> {
+        try {
+            final var newClusterStateFuture = new PlainActionFuture<ClusterState>();
+            final var masterService = clusterService.getMasterService();
+            masterService.setClusterStateSupplier(() -> clusterState);
+            masterService.setClusterStatePublisher((clusterStatePublicationEvent, publishListener, ackListener) -> {
+                ClusterServiceUtils.setAllElapsedMillis(clusterStatePublicationEvent);
+                assertFalse(newClusterStateFuture.isDone());
+                newClusterStateFuture.onResponse(clusterStatePublicationEvent.getNewState());
+                ackListener.onCommit(TimeValue.ZERO);
+                for (final var discoveryNode : clusterStatePublicationEvent.getNewState().nodes()) {
+                    ackListener.onNodeAck(discoveryNode, null);
+                }
+                publishListener.onResponse(null);
+            });
             try {
-                TransportMasterNodeActionUtils.runMasterOperation(masterNodeAction, request, clusterState, new PlainActionFuture<>());
+                // if the operation completes without publishing a state then the state must be unchanged
+                TransportMasterNodeActionUtils.runMasterOperation(
+                    masterNodeAction,
+                    request,
+                    clusterState,
+                    newClusterStateFuture.map(ignored -> clusterState)
+                );
+                assertTrue("operation should have completed synchronously", newClusterStateFuture.isDone());
+                return newClusterStateFuture.get();
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
-        });
+        } finally {
+            resetMasterService();
+        }
     }
 
-    private ClusterState executeClusterStateUpdateTask(ClusterState state, Runnable runnable) {
-        ClusterState[] result = new ClusterState[1];
-        doAnswer(invocationOnMock -> {
-            ClusterStateUpdateTask task = (ClusterStateUpdateTask) invocationOnMock.getArguments()[1];
-            result[0] = task.execute(state);
-            return null;
-        }).when(clusterService).submitStateUpdateTask(anyString(), any(ClusterStateUpdateTask.class), any());
-        runnable.run();
-        assertThat(result[0], notNullValue());
-        return result[0];
+    private ActionListener<TransportResponse.Empty> createTestListener() {
+        return ActionListener.wrap(() -> { throw new AssertionError("task should not complete"); });
     }
 }
