@@ -17,7 +17,6 @@ import org.elasticsearch.cluster.SnapshotsInProgress.Entry;
 import org.elasticsearch.cluster.SnapshotsInProgress.ShardState;
 import org.elasticsearch.cluster.SnapshotsInProgress.State;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.collect.ImmutableOpenMap;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.unit.ByteSizeValue;
@@ -27,8 +26,8 @@ import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.repositories.IndexId;
 import org.elasticsearch.repositories.ShardGeneration;
 import org.elasticsearch.repositories.ShardSnapshotResult;
-import org.elasticsearch.test.AbstractDiffableWireSerializationTestCase;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.test.SimpleDiffableWireSerializationTestCase;
 import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.xcontent.ToXContent;
 import org.elasticsearch.xcontent.XContentBuilder;
@@ -47,7 +46,7 @@ import static org.elasticsearch.xcontent.XContentFactory.jsonBuilder;
 import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.equalTo;
 
-public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireSerializationTestCase<Custom> {
+public class SnapshotsInProgressSerializationTests extends SimpleDiffableWireSerializationTestCase<Custom> {
 
     @Override
     protected Custom createTestInstance() {
@@ -71,20 +70,16 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
         }
         long startTime = randomLong();
         long repositoryStateId = randomLong();
-        ImmutableOpenMap.Builder<ShardId, SnapshotsInProgress.ShardSnapshotStatus> builder = ImmutableOpenMap.builder();
-        final List<Index> esIndices = indices.keySet()
-            .stream()
-            .map(i -> new Index(i, randomAlphaOfLength(10)))
-            .collect(Collectors.toList());
+        Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = new HashMap<>();
+        final List<Index> esIndices = indices.keySet().stream().map(i -> new Index(i, randomAlphaOfLength(10))).toList();
         List<String> dataStreams = Arrays.asList(generateRandomStringArray(10, 10, false));
         for (Index idx : esIndices) {
             int shardsCount = randomIntBetween(1, 10);
             for (int j = 0; j < shardsCount; j++) {
-                builder.put(new ShardId(idx, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
+                shards.put(new ShardId(idx, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
             }
         }
         List<SnapshotFeatureInfo> featureStates = randomList(5, SnapshotFeatureInfoTests::randomSnapshotFeatureInfo);
-        ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = builder.build();
         return new Entry(
             snapshot,
             includeGlobalState,
@@ -230,8 +225,7 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                 );
             }
             case 2 -> {
-                List<String> dataStreams = Stream.concat(entry.dataStreams().stream(), Stream.of(randomAlphaOfLength(10)))
-                    .collect(Collectors.toList());
+                List<String> dataStreams = Stream.concat(entry.dataStreams().stream(), Stream.of(randomAlphaOfLength(10))).toList();
                 return new Entry(
                     entry.snapshot(),
                     entry.includeGlobalState(),
@@ -304,16 +298,14 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
             }
             case 6 -> {
                 Map<String, IndexId> indices = new HashMap<>(entry.indices());
-                ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = entry.shards();
                 IndexId indexId = new IndexId(randomAlphaOfLength(10), randomAlphaOfLength(10));
                 indices.put(indexId.getName(), indexId);
-                ImmutableOpenMap.Builder<ShardId, SnapshotsInProgress.ShardSnapshotStatus> builder = ImmutableOpenMap.builder(shards);
+                Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards = new HashMap<>(entry.shards());
                 Index index = new Index(indexId.getName(), randomAlphaOfLength(10));
                 int shardsCount = randomIntBetween(1, 10);
                 for (int j = 0; j < shardsCount; j++) {
-                    builder.put(new ShardId(index, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
+                    shards.put(new ShardId(index, j), randomShardSnapshotStatus(randomAlphaOfLength(10)));
                 }
-                shards = builder.build();
                 return new Entry(
                     entry.snapshot(),
                     entry.includeGlobalState(),
@@ -393,24 +385,20 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
                 Collections.emptyList(),
                 1234567,
                 0,
-                ImmutableOpenMap.<ShardId, SnapshotsInProgress.ShardSnapshotStatus>builder()
-                    .fPut(
-                        new ShardId("index", "uuid", 0),
-                        SnapshotsInProgress.ShardSnapshotStatus.success(
-                            "nodeId",
-                            new ShardSnapshotResult(new ShardGeneration("shardgen"), new ByteSizeValue(1L), 1)
-                        )
+                Map.of(
+                    new ShardId("index", "uuid", 0),
+                    SnapshotsInProgress.ShardSnapshotStatus.success(
+                        "nodeId",
+                        new ShardSnapshotResult(new ShardGeneration("shardgen"), new ByteSizeValue(1L), 1)
+                    ),
+                    new ShardId("index", "uuid", 1),
+                    new SnapshotsInProgress.ShardSnapshotStatus(
+                        "nodeId",
+                        ShardState.FAILED,
+                        "failure-reason",
+                        new ShardGeneration("fail-gen")
                     )
-                    .fPut(
-                        new ShardId("index", "uuid", 1),
-                        new SnapshotsInProgress.ShardSnapshotStatus(
-                            "nodeId",
-                            ShardState.FAILED,
-                            "failure-reason",
-                            new ShardGeneration("fail-gen")
-                        )
-                    )
-                    .build(),
+                ),
                 null,
                 null,
                 Version.CURRENT
@@ -528,7 +516,7 @@ public class SnapshotsInProgressSerializationTests extends AbstractDiffableWireS
         }
     }
 
-    public static State randomState(ImmutableOpenMap<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards) {
+    public static State randomState(Map<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shards) {
         return SnapshotsInProgress.completed(shards.values())
             ? randomFrom(State.SUCCESS, State.FAILED)
             : randomFrom(State.STARTED, State.INIT, State.ABORTED);
